[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "picodaq"
authors = [
    {name = "Daniel Wagenaar", email = "daw@caltech.edu"},
]
description = "Python library for picoDAQ data acquisition"
readme = "README.md"
version = "0.1.0"
dependencies = [
    "numpy",
    "scipy",
    "pyqt5",
]
requires-python = ">=3.8"
classifiers = [ 
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/wagenadl/picodaq"

